Playlist Editor UI enhancements and fixes
- remove trailing * on simple details lines if nothing was after it
- remove unused playlistentry.php and references to it
- change arg separator from * to |
- fix extra spacing before first arg after a separator
- Added 'Insert Before' and 'Insert After' buttons to allow inserting
  new items in the middle of a playlist
- Scroll to the top of the playlist details when a playlist is loaded
- Add name of newly saved playlist to the list of available playlists
- Preserve state of selected item and enable/disabled button status
  when saving a playlist.
- Save and reapply the sequence name and media name field when
  switching from a Sequence or Media type to a 'Sequence+Media' type.
- Disable inappropriate playlist related buttons when creating a new
  playlist that has not yet been saved.
- Set default playlist entry type to 'Media' if there are no sequences,
  and to 'Sequence' if there are no media files, instead of defaulting
  to 'Seq+Media'.
- Prevent some scrolling the playlist details table when editing
  different types of playlist entries that have differing amounts of
  input fields.
- URI encode filenames when lookup up media file metadata via the API
- Convert PrintArgInputs() select options to put values in double
  quotes instead of single quotes.  This allows filenames, playlists,
  etc. to have embedded single quotes since these are valid in the
  JSON config files.
- Make the playlist editor a little more mobile-friendly.  The details
  section still needs quite a bit of work to fit onto smaller screens,
  but the rest of the screen should be able to resize.

--- a/www/css/fpp.css
+++ b/www/css/fpp.css
@@ -677,12 +677,14 @@ fieldset
 
 .playlistBoxLeft {
     float: left;
-    width: 50%;
+    min-width: 300px;
+    padding-right: 50px;
+    padding-bottom: 15px;
 }
 
 .playlistBoxRight {
     float: left;
-    width: 50%;
+    min-width: 300px;
 }
 
 .textRight{
@@ -812,8 +814,15 @@ fieldset
 	min-height: 20px;
 }
 
+.playlistEditButton, .playlistDetailsEditButton {
+    margin-right: 10px;
+    margin-top: 5px;
+}
+
 .pl_title {
 	font-size: larger;
+    text-align: center;
+    min-width: 300px;
 }
 
 .title {
